--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,6 +2,9 @@
   flex-direction: row;
   display: inline-flex;
   height: 600px;
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 .rowImage {
@@ -26,6 +29,7 @@
   flex-direction: column;
   height: 600px;
   background-color: white;
+  justify-content: center;
 }
 .ecosystemsRow {
   width: 100%;
@@ -34,6 +38,10 @@
   display: inline-flex;
 
   background-color: white;
+}
+
+.enquiryForm {
+  width: 100%;
 }
 
 @media screen and (max-width: 720px) {
